# kofun

./: .gitattributes  .gitignore  DESIGN.md  LICENSE-MIT  MANIFEST.sha256  Makefile  Makefile.python  NOTICE  README.md  langc.py  pyproject.toml  run_spec.py
artifacts/: optional-bool-monad.evidence.json  rust-shim-build-cost.json  verification-summary.json
backlog/: ISSUE_TEMPLATE.md  README.md  issues-01-syntax.md  issues-02-parser.md  issues-03-diagnostics.md  issues-04-modules.md  issues-05-inference.md  issues-06-types.md  issues-07-ownership.md  issues-08-memory.md  issues-09-effects.md  issues-10-meta.md  issues-11-ir.md  issues-12-optimizer.md  issues-13-codegen.md  issues-14-vm.md  issues-15-stdlib.md  issues-16-collections.md  issues-17-science.md  issues-18-concurrency.md  issues-19-packages.md  issues-20-docs_tools.md  issues-21-developer_tools.md  issues-22-interop.md  issues-23-platforms.md  issues-24-laws.md  issues-25-bootstrap.md  issues-26-quality.md  issues-27-ecosystem.md  summary.json
benchmarks/: README.md  fibonacci.cofn  vector.frost
bootstrap/: README.md  check_bootstrap.kofun  check_bootstrap.py  manifest.json
docs/: BUILD_SYSTEM.md  CODING_INTERVIEW.md  COMPILER_ARCHITECTURE.md  DESIGN_DECISIONS.md  DEVELOPER_DISCOVERY.md  LANGUAGE_VISION.md  LAW_SYSTEM.md  MEMORY_MODEL.md  METAPROGRAMMING.md  MVP_IMPLEMENTED.md  NAMING.md  NATIVE_BACKEND.md  ONE_DAY_TUTORIAL.md  ROADMAP.md  RUST_CRATE_SHIMS.md  SCIENTIFIC_COMPUTING.md  SECURITY.md  SELF_HOSTING.md  SEMANTICS.md  STANDARD_LIBRARY_CHARTER.md  SYNTAX.md  TYPE_SYSTEM.md
examples/: api_server.kofun  broken_list_monad.frost  (+14 more)
(+1165 files in other folders)
