[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kofun-lang-bootstrap"
version = "0.2.0"
description = "A bootstrap implementation of the Kofun programming language"
requires-python = ">=3.11"
license = {text = "Apache-2.0 OR MIT"}
authors = [{name = "Kofun Language Project"}]
dependencies = []

[project.scripts]
kofun = "kofun.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
